kubernetes/apps/default/nextcloud/app/route.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: nextcloud
spec:
  parentRefs:
    - name: traefik-private-default
      namespace: network
      sectionName: https-wildcard-secret-private-domain
    - name: traefik-public-default
      namespace: network
      sectionName: https-nc
  hostnames:
    - "nc.${SECRET_PRIVATE_DOMAIN}"
    - "nc.${SECRET_PUBLIC_DOMAIN1}"
  rules:
    - backendRefs:
        - name: nextcloud
          port: 8080
